--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ header > hgroup > h1{
     padding-top: 80px;
 }
 main{
-    max-width: 800px;
+    max-width: 75vw;
     margin: auto;
     background-color: white;
     border-radius: 0px 0px 20px 20px;
@@ -78,11 +78,13 @@ main{
 }
 section{
     display: inline-block;
-    width: 70%;
+    min-width: 75%;
+    max-width: 80%;
 }
 section > nav{
     display: inline-block;
-    width: 20%;
+    max-width: 20%;
+    min-width: 15%;
     min-height: 100%;
 }
 section > nav > ul{
@@ -103,9 +105,11 @@ section > nav > ul > li > a{
 }
 article{
     display: inline-block;
-    width: 75%;
+    max-width: 75%;
+    min-width: 75%;
     padding: 5px;
     margin-left: 10px;
+    margin-top: 3%;
 }
 article > h1{
     background-image: linear-gradient(to right, var(--Azul), transparent);
@@ -119,7 +123,14 @@ article > p{
 }
 aside{
     display: inline-block;
-    width: 15%;
+    min-width: 15%;
+    max-width: 20%;
+    margin-top: 10px;
+    position: absolute;
+}
+aside > a > img{
+    max-width: 80%;
+    max-height: 80%;
 }
 footer{
     background-image: linear-gradient(to bottom, var(--LaranjaEscuro), var(--Laranja), var(--LaranjaEscuro));
