--- a/css/styleModel.css
+++ b/css/styleModel.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
-body{}
+body{
+    font-family: 'Times New Roman', Times, serif;
+}
+p{
+    text-align: justify;
+    text-indent: 20px;
+}
 header{
     border: 1px dashed black;
     padding: 5px;
@@ -18,7 +24,7 @@ main{
 section{
     border: 1px dashed black;
     padding: 5px;
-    width: 70%;
+    max-width: 70%;
     display: inline-block;
 }
 article{
@@ -27,22 +33,23 @@ article{
     margin-bottom: 5px;
 }
 article > div{
-    border: 1px dashed black;
     padding: 5px;
     display: inline-block;
-    max-width: 60%;
+    width: 65%;
 }
 article > aside{
     border: 1px dashed black;
     padding: 5px;
     display: inline-block;
-    max-width: 35%;
+    max-width: 22%;
+    position: absolute;
+    margin-left: 5px;
 }
 main > aside{
     border: 1px dashed black;
     padding: 5px;
-    width: 25%;
-    min-height: 84%;
+    max-width: 27.5%;
+    min-height: 83.5%;
     display: inline-block;
     position: absolute;
     margin-left: 5px;
