--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,32 @@ aside > a > img{
     max-width: 80%;
     max-height: 80%;
 }
+form{
+    background-color: white;
+    padding: 10px;
+}
+form > p{
+    text-align: right;
+    padding: 5px;
+}
+form > p > a{
+    text-decoration: none;
+}
+form > fieldset{
+    padding: 10px;
+    border-radius: 10px;
+    line-height: 1.8em;
+}
+form > fieldset > legend{
+    padding: 5px;
+    font-family: var(--texto);
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+form > fieldset > label{
+    padding: 5px;
+}
 footer{
     background-image: linear-gradient(to bottom, var(--LaranjaEscuro), var(--Laranja), var(--LaranjaEscuro));
     text-align: center;
