--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,12 @@
 .filter{
     text-align: center;
 }
+.content{
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+}
 em{
     background-color: var(--AzulClaro);
     color: var(--LaranjaEscuro);
@@ -45,6 +51,8 @@ em{
 }
 body{
     background-color: lightgray;
+    width: 100vw;
+    height: 100vh;
 }
 header{
     background-image: linear-gradient(to bottom, var(--LaranjaEscuro), var(--Laranja), var(--LaranjaEscuro));
