--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@
 }
 .content{
     background-color: white;
-    width: 100%;
-    height: 100%;
+    width: 98%;
+    height: 98%;
     padding: 10px;
 }
 em{
@@ -99,13 +99,12 @@ h1{
 }
 section{
     display: inline-block;
-    max-width: 70%;
-    max-height: 100%;
-    padding: 15px;
     margin-top: 10px;
-    text-align: justify;
-    text-indent: 30px;
     vertical-align: top;
+    min-width: 75%;
+}
+section > iframe{
+    width: 100%;
 }
 div{
     width: 100%;
@@ -155,6 +154,7 @@ aside > a > img{
 form{
     padding: 10px;
     margin: auto;
+    text-align: center;
 }
 form > p{
     text-align: right;
